@@ -60,7 +60,7 @@
     NEEDED TO COMPLY WITH ANY SUCH LICENSES OR RIGHTS.
   -->
 
-<project name="eucalyptus" basedir=".">
+<project name="eucalyptus" default="build-all" basedir="." xmlns:ivy="antlib:org.apache.ivy.ant">
 	<property environment="localenv" />
 	<property name="euca.home.0" value="${localenv.EUCALYPTUS}" />
 	<condition property="euca.home" value="/opt/eucalyptus" else="${localenv.EUCALYPTUS}">
@@ -91,14 +91,19 @@
 			<include name="**/*.jar" />
 		</fileset>
 	</path>
+
+    <ivy:buildlist reference="build-module-path" onmissingdescriptor="skip">
+        <fileset dir="modules" includes="**/build.xml"/>
+    </ivy:buildlist>
+    <echo message="**** BUILDPATH: ${toString:build-module-path}" />
+    <echo message="**** SORTEDMODULES: ${toString:ivy.sorted.modules}" />
+    <property name="ivy.local.default.root" location="./ivy-repo" />
+
 	<taskdef onerror="ignore" name="groovy" classpathref="groovy-classpath" classname="org.codehaus.groovy.ant.Groovy" />
 	<macrodef name="call-module-target">
 		<attribute name="target" />
 		<sequential>
-			<property name="antTarget" value="@{target}" />
-			<groovy maxmemory="1024m" src="modules/module-inc.groovy" classpathref="groovy-classpath">
-				<jvmarg value="-XX:MaxPermSize=512m" />
-			</groovy>
+            <subant target="@{target}" buildpathref="build-module-path"/>
 		</sequential>
 	</macrodef>
 	<!--================================== build targets ==================================-->
